initial implementation for jwt token generation upon login with a mock user

--- a/src/UsersMicroservice/src/Users.Infrastructure/Users.Infrastructure.csproj
+++ b/src/UsersMicroservice/src/Users.Infrastructure/Users.Infrastructure.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Users.Domain\Users.Domain.csproj" />
+      <ProjectReference Include="..\..\Users.Application\Users.Application.csproj" />
     </ItemGroup>
 
 </Project>
