--- a/src/UsersMicroservice/src/Users.Api/Users.Api.csproj
+++ b/src/UsersMicroservice/src/Users.Api/Users.Api.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Users.Application\Users.Application.csproj" />
+    <ProjectReference Include="..\Users.Infrastructure\Users.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
