a bit of refactoring the directories

--- a/src/UsersMicroservice/src/Users.Api/Users.Api.csproj
+++ b/src/UsersMicroservice/src/Users.Api/Users.Api.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Users.Application\Users.Application.csproj" />
+    <ProjectReference Include="..\Users.Application\Users.Application.csproj" />
     <ProjectReference Include="..\Users.Infrastructure\Users.Infrastructure.csproj" />
   </ItemGroup>
 
