--- a/src/UsersMicroservice/src/Users.Application/Users.Application.csproj
+++ b/src/UsersMicroservice/src/Users.Application/Users.Application.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Users.Domain\Users.Domain.csproj" />
+    <ProjectReference Include="..\Users.Domain\Users.Domain.csproj" />
   </ItemGroup>
 
 </Project>
