collected all the layers in src before started working on the service

--- a/src/EventsMicroservice/src/Events.Api/Events.Api.csproj
+++ b/src/EventsMicroservice/src/Events.Api/Events.Api.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Events.Application\Events.Application.csproj" />
+    <ProjectReference Include="..\Events.Application\Events.Application.csproj" />
     <ProjectReference Include="..\Events.Infrastructure\Events.Infrastructure.csproj" />
   </ItemGroup>
 
