--- a/src/EventsMicroservice/src/Events.Infrastructure/Events.Infrastructure.csproj
+++ b/src/EventsMicroservice/src/Events.Infrastructure/Events.Infrastructure.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Events.Application\Events.Application.csproj" />
     <ProjectReference Include="..\Events.Domain\Events.Domain.csproj" />
-    <ProjectReference Include="..\..\Events.Application\Events.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
