configured the dbcontext and modelbuilder for eventparticipant, added the attribute to event aswell

--- a/src/EventsMicroservice/src/Events.Infrastructure/Events.Infrastructure.csproj
+++ b/src/EventsMicroservice/src/Events.Infrastructure/Events.Infrastructure.csproj
@@ -16,4 +16,10 @@
 
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Users.Domain">
+      <HintPath>..\..\..\UsersMicroservice\src\Users.Domain\obj\Debug\net9.0\Users.Domain.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
