--- a/src/foodclub-ui-next/.vscode/launch.json
+++ b/src/foodclub-ui-next/.vscode/launch.json
@@ -4,13 +4,31 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
             "type": "node-terminal",
             "name": "Run Script: dev (pnpm)",
             "request": "launch",
             "command": "pnpm run dev",
             "cwd": "${workspaceFolder}"
+        },
+        {
+            "name": "Next.js: debug full stack",
+            "type": "node",
+            "request": "launch",
+            "program": "${workspaceFolder}/node_modules/next/dist/bin/next",
+            "runtimeArgs": [
+                "--inspect"
+            ],
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "serverReadyAction": {
+                "action": "debugWithChrome",
+                "killOnServerStop": true,
+                "pattern": "- Local:.+(https?://.+)",
+                "uriFormat": "%s",
+                "webRoot": "${workspaceFolder}"
+            }
         }
     ]
 }
