generate typescript client for the event service as a npm package from the service's OpenAPI spec

--- a/.gitignore
+++ b/.gitignore
@@ -408,3 +408,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Custom ignores
+src/npm-packages/events-ts-sdk/src/dist/
+src/npm-packages/events-ts-sdk/src/generated/
