--- a/src/npm-packages/events-ts-sdk/src/.npmrc
+++ b/src/npm-packages/events-ts-sdk/src/.npmrc
@@ -1,3 +1,2 @@
 //npm.pkg.github.com/:_authToken=${GITHUB_NODE_AUTH_TOKEN}
-@prvacy:registry=https://npm.pkg.github.com
-always-auth=true
+@Rameez349:registry=https://npm.pkg.github.com
