--- a/src/EventsMicroservice/src/Events.Infrastructure/Events.Infrastructure.csproj
+++ b/src/EventsMicroservice/src/Events.Infrastructure/Events.Infrastructure.csproj
@@ -24,5 +24,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.10" />
 
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+
+    <PackageReference Include="Stripe.net" Version="49.2.0" />
   </ItemGroup>
 </Project>
