last update broke docker image, small fixes, working now

--- a/k8s/events-api/deployment.yaml
+++ b/k8s/events-api/deployment.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
         - name: events-api  
           image: mathilch/events-api:latest
+          imagePullPolicy: Always
           ports: 
             - containerPort: 8080
           env: 
