change data models on backend, so they match UI

--- a/.gitignore
+++ b/.gitignore
@@ -412,3 +412,4 @@ next-env.d.ts
 # Custom ignores
 src/npm-packages/events-ts-sdk/src/dist/
 src/npm-packages/events-ts-sdk/src/generated/
+/openapi.json
