--- a/src/EventsMicroservice/src/Events.Api/appsettings.Development.json
+++ b/src/EventsMicroservice/src/Events.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "FoodClubEventsDbConnection": "Host=127.0.0.1;Port=5432;Database=eventsdb;Username=postgres;Password=postgres"
   }
 }
