--- a/src/UsersMicroservice/src/Users.Api/appsettings.Development.json
+++ b/src/UsersMicroservice/src/Users.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "FoodClubUserDbConnection": "Host=127.0.0.1;Port=5432;Database=usersdb;Username=postgres;Password=postgres"
   }
 }
