--- a/src/foodclub-ui-next/package.json
+++ b/src/foodclub-ui-next/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
