--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
     volumes:
       # Persist data outside the container so that it isnt lost in case it stops or is deleted
       - users_pgdata:/var/lib/postgresql/data 
+    ports:
+      - "5433:5432"
     networks: 
       - plateful-network
 
@@ -31,7 +33,7 @@ services:
       dockerfile: Dockerfile 
     container_name: events-api
     ports:
-      - "5000:8080"
+      - "5002:8080"
     depends_on:
       - events-db
       - users-api 
@@ -48,7 +50,23 @@ services:
     volumes:
       # Persist data outside the container so that it isnt lost in case it stops or is deleted
       - events_pgdata:/var/lib/postgresql/data 
+    ports:
+      - "5434:5432"
     networks: 
+      - plateful-network
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: root
+    ports:
+      - "5050:80"
+    depends_on:
+      - users-db
+      - events-db
+    networks:
       - plateful-network
 
 volumes:
