Juan Carlo's npmrc token

--- a/src/foodclub-ui-next/.npmrc
+++ b/src/foodclub-ui-next/.npmrc
@@ -5,3 +5,5 @@ registry=https://registry.npmjs.org/
 @prvacy:registry=https://npm.pkg.github.com
 @Rameez349:registry=https://npm.pkg.github.com
 //npm.pkg.github.com/:_authToken=${GITHUB_NODE_AUTH_TOKEN}
+//@zf44bl-maker:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authToken=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
