--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     ports:
       - "5001:8080"
     depends_on:
-      - users-db
+      users-db:
+        condition: service_healthy
     networks:
       - plateful-network
 
@@ -26,6 +27,12 @@ services:
       - "5433:5432"
     networks: 
       - plateful-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 5s
 
   events-api:
     build:
@@ -35,8 +42,10 @@ services:
     ports:
       - "5002:8080"
     depends_on:
-      - events-db
-      - users-api 
+      events-db:
+        condition: service_healthy
+      users-api:
+        condition: service_started
     networks:
       - plateful-network
 
@@ -54,6 +63,12 @@ services:
       - "5434:5432"
     networks: 
       - plateful-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 5s
 
   pgadmin:
     image: dpage/pgadmin4
@@ -64,8 +79,10 @@ services:
     ports:
       - "5050:80"
     depends_on:
-      - users-db
-      - events-db
+      users-db:
+        condition: service_healthy
+      events-db:
+        condition: service_healthy
     networks:
       - plateful-network
 
