--- a/src/UsersMicroservice/src/Users.Application/Users.Application.csproj
+++ b/src/UsersMicroservice/src/Users.Application/Users.Application.csproj
@@ -9,11 +9,14 @@
   <ItemGroup>
     <Folder Include="Dtos\Responses\" />
   </ItemGroup>
-
+    
+  <ItemGroup>
+      <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>  
+    
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.9" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.9" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.9" />
