--- a/.github/workflows/build-foodclub-next-app.yaml
+++ b/.github/workflows/build-foodclub-next-app.yaml
@@ -28,25 +28,31 @@ jobs:
         uses: pnpm/action-setup@v4
         with:
             version: 10
+            run_install: false
 
       - name: Setup Node
         uses: actions/setup-node@v6
         with:
           node-version: 24.x
           cache: 'pnpm'
+          cache-dependency-path: ./src/foodclub-ui-next/pnpm-lock.yaml
 
       - name: Install dependencies
+        working-directory: src/foodclub-ui-next
         env:
           GITHUB_NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: pnpm install --frozen-lockfile
 
       - name: Type Check
+        working-directory: src/foodclub-ui-next
         run: pnpm exec tsc --noEmit
 
       - name: Lint
+        working-directory: src/foodclub-ui-next
         run: pnpm lint
 
       - name: Build
+        working-directory: src/foodclub-ui-next
         env:
           NEXT_PUBLIC_USERS_API_BASE_URL: "http://localhost:5001"
           NEXT_PUBLIC_EVENTS_API_BASE_URL: "http://localhost:5002"
