Add comprehensive frontend testing suite and Docker configuration
- Added 45 frontend tests using Jest and React Testing Library
- Created test suites for components: RoundedLink, FcInput, MealCard, ImageDropzone, FoodAppHeader
- Added JWT decoder utility tests
- Configured Jest with Next.js integration
- Updated CI/CD workflow to use pnpm with frozen lockfile
- Configured Docker with GitHub Package Registry authentication for @Rameez349/events-api-sdk
- Updated Dockerfile to prioritize pnpm over npm
- Removed package-lock.json in favor of pnpm-lock.yaml
- Added GITHUB_NODE_AUTH_TOKEN secret handling for private packages

--- a/src/foodclub-ui-next/.npmrc
+++ b/src/foodclub-ui-next/.npmrc
@@ -1,7 +1,8 @@
 # Default registry (npm public)
 registry=https://registry.npmjs.org/
 
-# Private GitHub registry for @prvacy scope
-@prvacy:registry=https://npm.pkg.github.com
+# Private GitHub registry for @Rameez349 scope
 @Rameez349:registry=https://npm.pkg.github.com
+
+# Authentication for GitHub Package Registry (uses environment variable)
 //npm.pkg.github.com/:_authToken=${GITHUB_NODE_AUTH_TOKEN}
