--- a/.github/workflows/build-foodclub-next-app.yaml
+++ b/.github/workflows/build-foodclub-next-app.yaml
@@ -27,8 +27,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-            version: 10
-            run_install: false
+          version: 9
 
       - name: Setup Node
         uses: actions/setup-node@v6
@@ -45,15 +44,15 @@ jobs:
 
       - name: Type Check
         working-directory: src/foodclub-ui-next
-        run: pnpm exec tsc --noEmit
+        run: npx tsc --noEmit
 
       - name: Lint
         working-directory: src/foodclub-ui-next
-        run: pnpm lint
+        run: pnpm run lint
 
       - name: Build
         working-directory: src/foodclub-ui-next
         env:
           NEXT_PUBLIC_USERS_API_BASE_URL: "http://localhost:5001"
           NEXT_PUBLIC_EVENTS_API_BASE_URL: "http://localhost:5002"
-        run: pnpm build
+        run: pnpm run build
