--- a/.github/workflows/build-foodclub-next-app.yaml
+++ b/.github/workflows/build-foodclub-next-app.yaml
@@ -1,4 +1,4 @@
-name: Build foodclub next web app
+name: Build and test FoodClub Next.js web app
 
 # Simple action that runs pnpm build and lint to check if there are no build errors.
 
@@ -56,3 +56,7 @@ jobs:
           NEXT_PUBLIC_USERS_API_BASE_URL: "http://localhost:5001"
           NEXT_PUBLIC_EVENTS_API_BASE_URL: "http://localhost:5002"
         run: pnpm run build
+
+      - name: Test
+        working-directory: src/foodclub-ui-next
+        run: pnpm run test
