--- a/.github/workflows/build-foodclub-next-app.yaml
+++ b/.github/workflows/build-foodclub-next-app.yaml
@@ -44,7 +44,7 @@ jobs:
 
       - name: Type Check
         working-directory: src/foodclub-ui-next
-        run: npx tsc --noEmit
+        run: pnpm exec tsc --noEmit
 
       - name: Lint
         working-directory: src/foodclub-ui-next
