notification sender client in events api

--- a/src/EventsMicroservice/src/Events.Api/appsettings.json
+++ b/src/EventsMicroservice/src/Events.Api/appsettings.json
@@ -20,5 +20,9 @@
   },
   "UserApi": {
     "BaseAddress": "http://users-api:8080/"
+  },
+  "AzureServiceBus": {
+    "ConnectionString": "Endpoint=sb://food-club-app.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=GRmAYTbczsovvCVUp9I1K0LMR/Pj26usI+ASbD8Cbfk=",
+    "QueueName": "notifications-queue"
   }
 }
