--- a/src/foodclub-ui-next/package.json
+++ b/src/foodclub-ui-next/package.json
@@ -19,6 +19,8 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@Rameez349/events-api-sdk": "^1.1.25",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.5.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
