add a script to build and push docker images, add HPA for k8s cluster, add basic load tests, fix small bugs

--- a/k8s/chat-api/deployment.yaml
+++ b/k8s/chat-api/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: chat-api
-          image: svhldev/chat-api:latest
+          image: ghcr.io/prvacy/foodclub-chat-api:latest
           ports:
             - containerPort: 8080
           env:
