--- a/k8s/events-api/deployment.yaml
+++ b/k8s/events-api/deployment.yaml
@@ -3,23 +3,23 @@ kind: Deployment
 metadata:
   name: events-api
 spec:
-  replicas: 2
+  # replicas: 2
   selector:
-    matchLabels: 
-      app: events-api 
+    matchLabels:
+      app: events-api
   # the pod template
   template:
-    metadata: #contains the labels applied to the pod. needs to match the selector 
-      labels: 
-        app: events-api  
+    metadata: #contains the labels applied to the pod. needs to match the selector
+      labels:
+        app: events-api
     spec:
       containers:
-        - name: events-api  
-          image: mathilch/events-api:latest
+        - name: events-api
+          image: ghcr.io/prvacy/foodclub-events-api:latest
           imagePullPolicy: Always
-          ports: 
+          ports:
             - containerPort: 8080
-          env: 
+          env:
             - name: DATABASE_HOST
               value: "events-db"
             - name: DATABASE_USER
@@ -28,6 +28,12 @@ spec:
               value: "postgres"
             - name: DATABASE_NAME
               value: "eventsdb"
-
-
-
+            - name: ConnectionStrings__FoodClubEventsDbConnection
+              value: "Host=events-db;Port=5432;Database=eventsdb;Username=postgres;Password=postgres;Maximum Pool Size=20;Minimum Pool Size=0;"
+          resources:
+            requests:
+              cpu: "250m"
+              memory: "256Mi"
+            limits:
+              cpu: "500m"
+              memory: "1024Mi"
