--- a/k8s/events-api/deployment.yaml
+++ b/k8s/events-api/deployment.yaml
@@ -30,6 +30,9 @@ spec:
               value: "eventsdb"
             - name: ConnectionStrings__FoodClubEventsDbConnection
               value: "Host=events-db;Port=5432;Database=eventsdb;Username=postgres;Password=postgres;Maximum Pool Size=20;Minimum Pool Size=0;"
+          volumeMounts:
+            - name: uploads-storage
+              mountPath: /app/wwwroot/uploads
           resources:
             requests:
               cpu: "250m"
@@ -37,3 +40,7 @@ spec:
             limits:
               cpu: "500m"
               memory: "1024Mi"
+      volumes:
+        - name: uploads-storage
+          persistentVolumeClaim:
+            claimName: events-uploads-pvc
