--- a/src/EventsMicroservice/src/Events.Infrastructure/Events.Infrastructure.csproj
+++ b/src/EventsMicroservice/src/Events.Infrastructure/Events.Infrastructure.csproj
@@ -10,6 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Context\SeedData.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
       <PrivateAssets>all</PrivateAssets>
